fixed icons and text from strange linewrap behavior

--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,7 @@ a {
     text-decoration: none;
     display: block;
 }
+
+.nowrap {
+    white-space: nowrap;
+}
